crates/strider-analyze/tests/snapshots/v2__arm_be__control__max_val.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "19" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "15" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
